packages/next-swc/crates/core/tests/errors/server-actions/server-graph/3/output.js
/* __next_internal_action_entry_do_not_use__ x */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
export const x = 1;
import ensureServerEntryExports from "private-next-rsc-action-validate";
ensureServerEntryExports([
    x
]);
__create_action_proxy__("b78c261f135a7a852508c2920bd7228020ff4bd7", null, x);
